--- a/ansible/install_applications/site.yml
+++ b/ansible/install_applications/site.yml
@@ -4,6 +4,7 @@
   gather_facts: no
   roles:
     - { role: cluster-calico,                    tags: kubernetes-app-cluster-calico,                    when: calico_enabled | bool }
+    - { role: cluster-multus,                    tags: kubernetes-app-cluster-multus,                    when: multus_enabled | bool }
     - { role: cluster-kubernetes-replicator,     tags: kubernetes-app-cluster-kubernetes-replicator,     when: kubernetes_replicator_enabled | bool }
     - { role: cluster-storage,                   tags: kubernetes-app-cluster-storage,                   when: storage_enabled | bool }
     - { role: cluster-metallb,                   tags: kubernetes-app-cluster-metallb,                   when: metallb_enabled | bool }
