--- a/apps/base/cluster-multus/deploy/k8s-bridge.yaml
+++ b/apps/base/cluster-multus/deploy/k8s-bridge.yaml
@@ -1,12 +1,12 @@
 apiVersion: "k8s.cni.cncf.io/v1"
 kind: NetworkAttachmentDefinition
 metadata:
-  name: {{ kubernetes_k8s_bridge_name }}
-  namespace: {{ kubernetes_k8s_bridge_namespace }}
+  name: k8s-bridge
+  namespace: kube-system
 spec:
   config: '{
       "cniVersion": "0.3.1",
-      "name": "{{ kubernetes_k8s_bridge_name }}",
+      "name": "k8s-bridge",
       "type": "bridge",
       "bridge": "k8sbr0",
       "isGateway": true,
@@ -16,6 +16,6 @@ spec:
       "hairpinMode": false,
       "ipam": {
         "type": "host-local",
-        "subnet": "{{ kubernetes_k8s_bridge_cidr }}"
+        "subnet": "10.10.0.0/16"
       }
     }'
