--- a/apps/base/cluster-multus/deploy/multus-daemonset.yaml
+++ b/apps/base/cluster-multus/deploy/multus-daemonset.yaml
@@ -110,7 +110,6 @@ data:
   # /etc/cni/net.d/ directory on each node, otherwise, it will not be used by the Kubelet.
   cni-conf.json: |
     {
-      {#
       "name": "multus-cni-network",
       "type": "multus",
       "capabilities": {
@@ -139,7 +138,6 @@ data:
         }
       ],
       "kubeconfig": "/etc/cni/net.d/multus.d/multus.kubeconfig"
-      #}
     }
 ---
 apiVersion: apps/v1
@@ -173,7 +171,7 @@ spec:
       serviceAccountName: multus
       containers:
       - name: kube-multus
-        image: ghcr.io/k8snetworkplumbingwg/multus-cni:v3.9.3
+        image: ghcr.io/k8snetworkplumbingwg/multus-cni:stable
         command: ["/entrypoint.sh"]
         args:
         - "--multus-conf-file=auto"
@@ -196,7 +194,7 @@ spec:
           mountPath: /tmp/multus-conf
       initContainers:
         - name: install-multus-binary
-          image: ghcr.io/k8snetworkplumbingwg/multus-cni:v3.9.3
+          image: ghcr.io/k8snetworkplumbingwg/multus-cni:stable
           command:
             - "cp"
             - "/usr/src/multus-cni/bin/multus"
