Handle replacements in kustomize overlays

--- a/ansible/install_applications/roles/app_base/defaults/main.yml
+++ b/ansible/install_applications/roles/app_base/defaults/main.yml
@@ -14,11 +14,17 @@ docker_private_registry:
   username: "{{ docker_registry_kube_registry_username }}"
   password: "{{ docker_registry_kube_registry_password }}"
 
-app_gitops_path: "{{ role_path }}/../../../../apps/base/{{ app_name }}"
-app_build_path: "{{ app_gitops_path }}/build"
+app_gitops_path: "{{ role_path }}/../../../../apps"
+app_build_path: "{{ app_gitops_path }}/base/{{ app_name }}/build"
 app_overlay_path: "{{ role_path }}/../../../../apps/vagrant/{{ app_name }}"
 app_deploy_path: "{{ app_overlay_path }}/deploy"
 
 sops_age_key_file: /path/to/key.txt
 
 app_deploymen_method: "ansible" # or "argo"
+
+app_kustomization_replacements:
+- regexp: ../../../base/
+  replace: ../base/
+- regexp: https://github.com/Neraud/home-server//apps/base/([^?]*)(\?ref=.*)?$
+  replace: ../base/\1
