Fix download-sickchill init container

--- a/apps/base/download-sickchill/deploy/secret/config_delta.ini
+++ b/apps/base/download-sickchill/deploy/secret/config_delta.ini
@@ -1,6 +1,10 @@
 # This file only contains a subset of available configurations
 # It isn't used directly by Sickchill, but it's merged in the complete config file
 
+# Each overlay contains a version of this file WITHOUT comments
+# Sops changes # to ; for ini files
+# And the python parsor sickchill uses doesn't support ; as a comment marker
+
 [General]
     web_host = 0.0.0.0
     web_port = 8081
