--- a/apps/base/dev-gitea/deploy/gitea/config/gitea.env
+++ b/apps/base/dev-gitea/deploy/gitea/config/gitea.env
@@ -28,8 +28,8 @@ GITEA_LDAP_NAME=OpenLDAP
 GITEA_LDAP_SECURITY_PROTOCOL=LDAPS
 GITEA_LDAP_HOST=openldap.auth-openldap.svc.cluster.local
 GITEA_LDAP_PORT=636
-GITEA_LDAP_USER_SEARCH_BASE=ou=users,dc=k8s,dc=test
-GITEA_LDAP_USER_FILTER=(&(objectClass=inetOrgPerson)(cn=%s)(memberOf=cn=gitea,ou=app_groups,dc=k8s,dc=test))
-GITEA_LDAP_ADMIN_FILTER=(&(objectClass=inetOrgPerson)(cn=%s)(memberOf=cn=admin,ou=gitea_roles,dc=k8s,dc=test))
+GITEA_LDAP_USER_SEARCH_BASE=ou=users,dc=ldap,dc=domain
+GITEA_LDAP_USER_FILTER=(&(objectClass=inetOrgPerson)(cn=%s)(memberOf=cn=gitea,ou=app_groups,dc=ldap,dc=domain))
+GITEA_LDAP_ADMIN_FILTER=(&(objectClass=inetOrgPerson)(cn=%s)(memberOf=cn=admin,ou=gitea_roles,dc=ldap,dc=domain))
 GITEA_LDAP_USERNAME_ATTRIBUTE=cn
 GITEA_LDAP_EMAIL_ATTRIBUTE=email
