Fix home-frigate mqtt user

--- a/apps/base/home-frigate/deploy/config/config_base.yml
+++ b/apps/base/home-frigate/deploy/config/config_base.yml
@@ -16,7 +16,7 @@ mqtt:
   client_id: frigate
   
   # Optional: user
-  user: "{FRIGATE_MQTT_USER}"
+  user: "frigate"
   
   # Optional: password
   # NOTE: Environment variables that begin with 'FRIGATE_' may be referenced in {}.
