--- a/apps/vagrant/logging-elasticsearch/deploy/kustomization.yaml
+++ b/apps/vagrant/logging-elasticsearch/deploy/kustomization.yaml
@@ -9,6 +9,10 @@ configMapGenerator:
   envs:
   - config/elasticsearch/elasticsearch.env
   behavior: merge
+- name: elasticsearch-config
+  files:
+  - config/elasticsearch/opensearch.yml
+  behavior: merge
 
 generators:
 - elasticsearch-secret-generator.yaml
