Add pvc-resource patch for logging-kibana

--- a/apps/vagrant/logging-kibana/deploy/kustomization.yaml
+++ b/apps/vagrant/logging-kibana/deploy/kustomization.yaml
@@ -13,6 +13,7 @@ generators:
 - secret-generator.yaml
 
 patches:
+- path: pvc-resources.yaml
 - path: statefulSet-resources.yaml
 - target:
     kind: Ingress
