Fix tool-homepage sops breaking yaml files

--- a/apps/vagrant/tool-homepage/deploy/secret-generator.yaml
+++ b/apps/vagrant/tool-homepage/deploy/secret-generator.yaml
@@ -14,6 +14,6 @@ secretFrom:
       kustomize.config.k8s.io/behavior: merge
   type: Opaque
   files:
-  - secret/services.yaml
+  - services.yaml=secret/services.yaml.bin
   - secret/settings.yaml
-  - secret/widgets.yaml
+  - widgets.yaml=secret/widgets.yaml.bin
