Fix tool-paperless domain

--- a/apps/vagrant/tool-paperless/deploy/paperless-secret-generator.yaml
+++ b/apps/vagrant/tool-paperless/deploy/paperless-secret-generator.yaml
@@ -1,7 +1,7 @@
 apiVersion: viaduct.ai/v1
 kind: ksops
 metadata:
-  name: zonemta-secret-generator
+  name: paperless-secret-generator
   annotations:
     config.kubernetes.io/function: |
         exec:
@@ -13,5 +13,5 @@ secretFrom:
       kustomize.config.k8s.io/needs-hash: "false"
       kustomize.config.k8s.io/behavior: merge
   type: Opaque
-  files:
+  envs:
   - secret/paperless.env
