Fix tool-paperless homepage widget

--- a/apps/vagrant/tool-paperless/deploy/kustomization.yaml
+++ b/apps/vagrant/tool-paperless/deploy/kustomization.yaml
@@ -17,6 +17,7 @@ patches:
 - path: redis-statefulSet-resources.yaml
 - path: paperless-statefulSet-resources.yaml
 - path: paperless-statefulSet-probe.yaml
+- path: paperless-ingress-homepage-widget.yaml
 - target:
     kind: Ingress
     name: paperless
