Add infra-zonemta default zone configuration in overlay

--- a/apps/vagrant/infra-zonemta/deploy/zonemta-secret-generator.yaml
+++ b/apps/vagrant/infra-zonemta/deploy/zonemta-secret-generator.yaml
@@ -16,3 +16,4 @@ secretFrom:
   files:
   - secret/zonemta/dbs.toml
   - secret/zonemta/plugin_simple-auth.toml
+  - secret/zonemta/zone_default.toml
