--- a/apps/base/infra-zonemta/deploy/zonemta/secret/zone_default.toml
+++ b/apps/base/infra-zonemta/deploy/zonemta/secret/zone_default.toml
@@ -7,5 +7,8 @@ pool="default"
 
 # If you want to send messages for this zone to next MTA instead of actual MX, then
 # uncomment following lines and change values
-host = "mailhog.infra-mailhog.svc.cluster.local"
-port = 1025
+#host = "smtp.ethereal.email"
+#port = 587
+#[default.auth]
+#user = "gsblpjxjdvhnqkgr@ethereal.email"
+#pass = "zDZpDnSsFf11Zfvtv5"
