Add dev-argo-cd private-repo secret to vagrant overlay

--- a/apps/base/dev-argo-cd/deploy/secret/private-repo.env
+++ b/apps/base/dev-argo-cd/deploy/secret/private-repo.env
@@ -1,4 +1,4 @@
 type=git
 url=http://gitea.dev-gitea.svc.cluster.local:3000/MyOrg/home-server.git
-username=argo
-password=Passw0rd
+username=changeme
+password=changeme
