--- a/apps/vagrant/dev-argo-cd/deploy/argocd-secret-generator.yaml
+++ b/apps/vagrant/dev-argo-cd/deploy/argocd-secret-generator.yaml
@@ -15,3 +15,13 @@ secretFrom:
   type: Opaque
   envs:
   - secret/argocd.env
+- metadata:
+    name: private-repo
+    annotations:
+      kustomize.config.k8s.io/needs-hash: "false"
+      kustomize.config.k8s.io/behavior: replace
+    labels:
+      argocd.argoproj.io/secret-type: repository
+  type: Opaque
+  envs:
+  - secret/private-repo.env
