Fix tool-nextcloud task-rescheduler secret

--- a/apps/base/tool-nextcloud/deploy/task-rescheduler/kustomization.yaml
+++ b/apps/base/tool-nextcloud/deploy/task-rescheduler/kustomization.yaml
@@ -13,7 +13,7 @@ generatorOptions:
  disableNameSuffixHash: true
 
 secretGenerator:
-- name: task-rescheduler-config
+- name: task-rescheduler
   files:
   - secret/config.yaml
 
