--- a/apps/vagrant/tool-nextcloud/deploy/task-rescheduler-secret-generator.yaml
+++ b/apps/vagrant/tool-nextcloud/deploy/task-rescheduler-secret-generator.yaml
@@ -8,10 +8,10 @@ metadata:
           path: ksops
 secretFrom:
 - metadata:
-    name: task-rescheduler-config
+    name: task-rescheduler
     annotations:
       kustomize.config.k8s.io/needs-hash: "false"
       kustomize.config.k8s.io/behavior: replace
   type: Opaque
   files:
-  - secret/task-rescheduler-config.yaml
+  - config.yaml=secret/task-rescheduler-config.yaml
