Update networkpolicies types to policyTypes

--- a/apps/base/dev-gitea/deploy/gitea/gitea-networkPolicies.yaml
+++ b/apps/base/dev-gitea/deploy/gitea/gitea-networkPolicies.yaml
@@ -3,7 +3,7 @@ apiVersion: networking.k8s.io/v1
 metadata:
   name: allow-to-gitea
 spec:
-  types: [Ingress]
+  policyTypes: [Ingress]
 
   podSelector:
     matchLabels:
