--- a/apps/base/infra-kubernetes-metrics-server/deploy/kubernetes-metrics-server/networkPolicy.yaml
+++ b/apps/base/infra-kubernetes-metrics-server/deploy/kubernetes-metrics-server/networkPolicy.yaml
@@ -4,7 +4,7 @@ metadata:
   name: allow-to-metrics-server
   namespace: infra-kubernetes-metrics-server
 spec:
-  types: [Ingress]
+  policyTypes: [Ingress]
 
   podSelector:
     matchLabels:
