--- a/apps/base/_common/deploy/deny-all-ingress-networkPolicy.yaml
+++ b/apps/base/_common/deploy/deny-all-ingress-networkPolicy.yaml
@@ -3,7 +3,7 @@ apiVersion: networking.k8s.io/v1
 metadata:
   name: deny-all-ingress
 spec:
-  types: [Ingress]
+  policyTypes: [Ingress]
 
   # Match all pods in the namespace
   podSelector: {}
