--- a/apps/base/dev-argo-workflows/deploy/base/workflow-controller/workflow-controller-networkPolicy.yaml
+++ b/apps/base/dev-argo-workflows/deploy/base/workflow-controller/workflow-controller-networkPolicy.yaml
@@ -3,7 +3,7 @@ apiVersion: networking.k8s.io/v1
 metadata:
   name: allow-to-workflow-controller
 spec:
-  types: [Ingress]
+  policyTypes: [Ingress]
 
   podSelector:
     matchLabels:
