--- a/apps/base/home-frigate/deploy/networkPolicy.yaml
+++ b/apps/base/home-frigate/deploy/networkPolicy.yaml
@@ -3,7 +3,7 @@ apiVersion: networking.k8s.io/v1
 metadata:
   name: allow-to-frigate
 spec:
-  types: [Ingress]
+  policyTypes: [Ingress]
 
   podSelector:
     matchLabels:
