--- a/apps/base/infra-crowdsec/deploy/lapi/networkPolicy.yaml
+++ b/apps/base/infra-crowdsec/deploy/lapi/networkPolicy.yaml
@@ -3,7 +3,7 @@ apiVersion: networking.k8s.io/v1
 metadata:
   name: allow-to-crowdsec-lapi
 spec:
-  types: [Ingress]
+  policyTypes: [Ingress]
 
   podSelector:
     matchLabels:
