--- a/apps/base/infra-kubernetes-dashboard/deploy/metrics-scraper/networkPolicy.yaml
+++ b/apps/base/infra-kubernetes-dashboard/deploy/metrics-scraper/networkPolicy.yaml
@@ -3,7 +3,7 @@ apiVersion: networking.k8s.io/v1
 metadata:
   name: allow-to-dashboard-metrics-scraper
 spec:
-  types: [Ingress]
+  policyTypes: [Ingress]
 
   podSelector:
     matchLabels:
