--- a/apps/base/monitoring-prometheus-operator/deploy/operator/networkPolicy.yaml
+++ b/apps/base/monitoring-prometheus-operator/deploy/operator/networkPolicy.yaml
@@ -3,7 +3,7 @@ apiVersion: networking.k8s.io/v1
 metadata:
   name: allow-to-prometheus-operator
 spec:
-  types: [Ingress]
+  policyTypes: [Ingress]
 
   podSelector:
     matchLabels:
