--- a/apps/base/tool-nextcloud/deploy/mysql/networkPolicy.yaml
+++ b/apps/base/tool-nextcloud/deploy/mysql/networkPolicy.yaml
@@ -3,7 +3,7 @@ apiVersion: networking.k8s.io/v1
 metadata:
   name: allow-to-mysql
 spec:
-  types: [Ingress]
+  policyTypes: [Ingress]
 
   podSelector:
     matchLabels:
