--- a/apps/vagrant/dev-argo-tasks/deploy/kustomization.yaml
+++ b/apps/vagrant/dev-argo-tasks/deploy/kustomization.yaml
@@ -1,12 +1,14 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
+namespace: dev-argo-tasks
+
 generators:
 - secret-generator.yaml
 
 resources:
 - ../../../base/dev-argo-tasks/deploy
-- sensor.yaml
+- sensors
 
 patches:
 - path: eventbus-resources.yaml
