Configure argocd to track resources using annotations

--- a/apps/base/dev-argo-cd/deploy/config/argocd.env
+++ b/apps/base/dev-argo-cd/deploy/config/argocd.env
@@ -1,3 +1,5 @@
+# See https://github.com/argoproj/argo-cd/blob/master/docs/operator-manual/argocd-cm.yaml
+
 # disables admin user. Admin is enabled by default
 admin.enabled=false
 
@@ -6,3 +8,7 @@ url=https://my-argocd-url-changeme
 
 # Enable KSOPS
 kustomize.buildOptions=--enable-alpha-plugins --enable-exec
+
+# Track using annotation to avoid conflicts on the default "app.kubernetes.io/instance" label
+# Seel : https://argo-cd.readthedocs.io/en/stable/user-guide/resource_tracking/#additional-tracking-methods-via-an-annotation
+application.resourceTrackingMethod=annotation
