Fix statefulSet case

--- a/apps/vagrant/auth-lemonldap/deploy/kustomization.yaml
+++ b/apps/vagrant/auth-lemonldap/deploy/kustomization.yaml
@@ -8,8 +8,8 @@ generators:
 - secret-generator.yaml
 
 patches:
-- path: statefulset-env.yaml
-- path: statefulset-resources.yaml
+- path: statefulSet-env.yaml
+- path: statefulSet-resources.yaml
 - path: service-handler-ip.yaml
 - path: pvc-resources.yaml
 - target:
