--- a/apps/base/auth-lemonldap/deploy/kustomization.yaml
+++ b/apps/base/auth-lemonldap/deploy/kustomization.yaml
@@ -23,7 +23,7 @@ resources:
 - ../../_common/deploy
 - ingress-auth.yaml
 - ingress-manager.yaml
-- networkPolicies.yaml
+- networkPolicy.yaml
 - service-handler.yaml
 - service.yaml
 - pvc.yaml
