--- a/apps/base/dev-gitea/deploy/gitea/kustomization.yaml
+++ b/apps/base/dev-gitea/deploy/gitea/kustomization.yaml
@@ -21,7 +21,7 @@ secretGenerator:
   env: secret/gitea.env
 
 resources:
-- gitea-networkPolicies.yaml
+- gitea-networkPolicy.yaml
 - gitea-service.yaml
 - gitea-ingress.yaml
 - gitea-pvc.yaml
