--- a/apps/base/dev-gitea/deploy/postgres/kustomization.yaml
+++ b/apps/base/dev-gitea/deploy/postgres/kustomization.yaml
@@ -17,7 +17,7 @@ secretGenerator:
   env: secret/pgsql.env
 
 resources:
-- pgsql-networkPolicies.yaml
+- pgsql-networkPolicy.yaml
 - pgsql-service.yaml
 - pgsql-pvc.yaml
 - pgsql-statefulSet.yaml
