--- a/apps/base/auth-phpldapadmin/deploy/kustomization.yaml
+++ b/apps/base/auth-phpldapadmin/deploy/kustomization.yaml
@@ -26,7 +26,7 @@ secretGenerator:
 resources:
 - namespace.yaml
 - ../../_common/deploy
-- networkPolicies.yaml
+- networkPolicy.yaml
 - service.yaml
 - ingress.yaml
 - deployment.yaml
