Configure dev-argo-workflow

--- a/apps/vagrant/dev-argo-workflows/deploy/kustomization.yaml
+++ b/apps/vagrant/dev-argo-workflows/deploy/kustomization.yaml
@@ -6,6 +6,7 @@ resources:
 
 patches:
 - path: argo-server-deployment-resources.yaml
+- path: workflow-controller-configmap-patch.yaml
 - path: workflow-controller-deployment-resources.yaml
 - target:
     kind: Ingress
