--- a/apps/vagrant/dev-argo-tasks/deploy/templates/app-build-and-deploy.yaml
+++ b/apps/vagrant/dev-argo-tasks/deploy/templates/app-build-and-deploy.yaml
@@ -107,7 +107,7 @@ spec:
               name: git-credentials
               key: gitea_password
       script:
-        image: registry.lan/template-source-fetcher:3.11.3-alpine3.17-1
+        image: registry.lan/template-source-fetcher:v2-3.11.3-alpine3.17-1
         command: [bash]
         source: |
           set -euo pipefail
@@ -136,7 +136,7 @@ spec:
         parameters:
         - name: app_name
       script:
-        image: registry.lan/template-source-fetcher:3.11.3-alpine3.17-1
+        image: registry.lan/template-source-fetcher:v2-3.11.3-alpine3.17-1
         command: [bash]
         source: |
           set -euo pipefail
