--- a/apps/vagrant/cluster-longhorn/application.yaml
+++ b/apps/vagrant/cluster-longhorn/application.yaml
@@ -18,7 +18,7 @@ spec:
   
   destination:
     server: https://kubernetes.default.svc
-    namespace: cluster-longhorn
+    namespace: longhorn-system
 
   syncPolicy:
     syncOptions:
