--- a/apps/vagrant/cluster-calico/application.yaml
+++ b/apps/vagrant/cluster-calico/application.yaml
@@ -18,7 +18,7 @@ spec:
   
   destination:
     server: https://kubernetes.default.svc
-    namespace: cluster-calico
+    namespace: kube-system
 
   syncPolicy:
     syncOptions:
