--- a/apps/vagrant/cluster-ingress-nginx/application.yaml
+++ b/apps/vagrant/cluster-ingress-nginx/application.yaml
@@ -18,7 +18,7 @@ spec:
   
   destination:
     server: https://kubernetes.default.svc
-    namespace: cluster-ingress-nginx
+    namespace: ingress-nginx
 
   syncPolicy:
     syncOptions:
