--- a/apps/vagrant/cluster-metallb/application.yaml
+++ b/apps/vagrant/cluster-metallb/application.yaml
@@ -18,7 +18,7 @@ spec:
   
   destination:
     server: https://kubernetes.default.svc
-    namespace: cluster-metallb
+    namespace: metallb-system
 
   syncPolicy:
     syncOptions:
