--- a/apps/base/monitoring-prometheus-operator/deploy/service-monitors/nginx-log-exporter.yaml
+++ b/apps/base/monitoring-prometheus-operator/deploy/service-monitors/nginx-log-exporter.yaml
@@ -14,7 +14,7 @@ spec:
     # We monitor the NGinx instance on the host that runs the exporter container, so we inject the `node_name` in the instance label
     - action: replace
       regex: (.*)
-      replacment: $1
+      replacement: $1
       sourceLabels:
       - __meta_kubernetes_pod_node_name
       targetLabel: instance
