--- a/apps/base/monitoring-prometheus-operator/deploy/alertmanager/networkPolicy.yaml
+++ b/apps/base/monitoring-prometheus-operator/deploy/alertmanager/networkPolicy.yaml
@@ -26,6 +26,7 @@ spec:
     - ports:
         - port: web
         - port: reloader-web
+      from:
         # Allow from prometheus
         - namespaceSelector:
             matchLabels:
