Fix monitoring-prometheus namespace

--- a/apps/vagrant/monitoring-prometheus-operator/application.yaml
+++ b/apps/vagrant/monitoring-prometheus-operator/application.yaml
@@ -18,7 +18,7 @@ spec:
   
   destination:
     server: https://kubernetes.default.svc
-    namespace: monitoring-prometheus-operator
+    namespace: monitoring-prometheus
 
   syncPolicy:
     syncOptions:
