--- a/apps/base/monitoring-prometheus-operator/deploy/service-monitors/nginx-log-exporter.yaml
+++ b/apps/base/monitoring-prometheus-operator/deploy/service-monitors/nginx-log-exporter.yaml
@@ -23,11 +23,13 @@ spec:
     # By default, the metrics are named like '[app]_http_...'
     # These relabelings move the '[app]' part from the name to a 'namespace' label 
     # From https://github.com/martin-helmich/prometheus-nginxlog-exporter/issues/13#issuecomment-496349455
-    - sourceLabels: [__name__]
+    - action: replace
+      sourceLabels: [__name__]
       regex: '([a-zA-Z0-9_]+)_(http|parse_errors)_(.*)'
       replacement: '$1'
       targetLabel: 'namespace'
-    - sourceLabels: [__name__]
+    - action: replace
+      sourceLabels: [__name__]
       regex: '([a-zA-Z0-9_]+)_(http|parse_errors)_(.*)'
       replacement: 'nginxlog_${2}_${3}'
       targetLabel: '__name__'
