--- a/apps/base/monitoring-prometheus-operator/deploy/service-monitors/kustomization.yaml
+++ b/apps/base/monitoring-prometheus-operator/deploy/service-monitors/kustomization.yaml
@@ -5,6 +5,7 @@ resources:
 - alertmanager.yaml
 - apcups.yaml
 - apiserver.yaml
+- argo-cd.yaml
 - argo-workflows.yaml
 - blackbox-exporter.yaml
 - blocky.yaml
