Clean dev-argo-cd to use the released manifests directly

--- a/apps/base/dev-argo-cd/deploy/kustomization.yaml
+++ b/apps/base/dev-argo-cd/deploy/kustomization.yaml
@@ -29,7 +29,43 @@ secretGenerator:
 resources:
 - namespace.yaml
 - ../../_common/deploy
-- base
-- cluster-rbac
-- crds
+- sops-key.yaml
+- manifests/cluster-install
+- argocd-server-tls-secret.yaml
+- argocd-server-ingress-grpc.yaml
+- argocd-server-ingress-http.yaml
 - project
+
+patches:
+- path: patches/argocd-application-controller-statefulset.yaml
+- path: patches/argocd-applicationset-controller-deployment.yaml
+- path: patches/argocd-dex-server-deployment.yaml
+- path: patches/argocd-notifications-controller-deployment.yaml
+- path: patches/argocd-redis-deployment.yaml
+- path: patches/argocd-repo-server-deployment.yaml
+- path: patches/argocd-server-deployment.yaml
+- target:
+    kind: ClusterRoleBinding
+    name: argocd-application-controller
+  patch: |-
+    - op: replace
+      path: /subjects/0/namespace
+      value: dev-argo-cd
+- target:
+    kind: ClusterRoleBinding
+    name: argocd-server
+  patch: |-
+    - op: replace
+      path: /subjects/0/namespace
+      value: dev-argo-cd
+
+images:
+- name: quay.io/argoproj/argocd
+  newName: registry.lan/argocd
+  newTag: v2.7.1-ksops
+- name: ghcr.io/dexidp/dex
+  newName: registry.lan/dex
+  newTag: v2.36.0
+- name: redis
+  newName: registry.lan/argocd-redis
+  newTag: 7.0.11-alpine
