--- a/apps/base/dev-argo-cd/deploy/manifests/base/notification/argocd-notifications-controller-deployment.yaml
+++ b/apps/base/dev-argo-cd/deploy/manifests/base/notification/argocd-notifications-controller-deployment.yaml
@@ -39,16 +39,9 @@ spec:
           livenessProbe:
             tcpSocket:
               port: 9001
-          image: registry.lan/argocd:v2.7.1-ksops
-          imagePullPolicy: IfNotPresent
+          image: quay.io/argoproj/argocd:latest
+          imagePullPolicy: Always
           name: argocd-notifications-controller
-          resources:
-            requests:
-              cpu: 25m
-              memory: 64Mi
-            limits:
-              cpu: 50m
-              memory: 64Mi
           volumeMounts:
             - name: tls-certs
               mountPath: /app/config/tls
@@ -61,8 +54,6 @@ spec:
             allowPrivilegeEscalation: false
             readOnlyRootFilesystem: true
       serviceAccountName: argocd-notifications-controller
-      nodeSelector:
-        capability/general-purpose: 'yes'
       securityContext:
         runAsNonRoot: true
         seccompProfile:
