--- a/apps/base/dev-argo-cd/deploy/manifests/base/dex/argocd-dex-server-deployment.yaml
+++ b/apps/base/dev-argo-cd/deploy/manifests/base/dex/argocd-dex-server-deployment.yaml
@@ -5,8 +5,6 @@ metadata:
     app.kubernetes.io/name: argocd-dex-server
     app.kubernetes.io/part-of: argocd
     app.kubernetes.io/component: dex-server
-  annotations:
-    reloader.stakater.com/auto: "true"
   name: argocd-dex-server
 spec:
   selector:
@@ -20,8 +18,8 @@ spec:
       serviceAccountName: argocd-dex-server
       initContainers:
       - name: copyutil
-        image: registry.lan/argocd:v2.7.1-ksops
-        imagePullPolicy: IfNotPresent
+        image: quay.io/argoproj/argocd:latest
+        imagePullPolicy: Always
         command: [/bin/cp, -n, /usr/local/bin/argocd, /shared/argocd-dex]
         volumeMounts:
         - mountPath: /shared
@@ -39,8 +37,8 @@ spec:
             type: RuntimeDefault
       containers:
       - name: dex
-        image: registry.lan/dex:v2.36.0
-        imagePullPolicy: IfNotPresent
+        image: ghcr.io/dexidp/dex:v2.36.0
+        imagePullPolicy: Always
         command: [/shared/argocd-dex, rundex]
         env:
           - name: ARGOCD_DEX_SERVER_DISABLE_TLS
@@ -49,13 +47,6 @@ spec:
                 name: argocd-cmd-params-cm
                 key: dexserver.disable.tls
                 optional: true
-        resources:
-          requests:
-            cpu: 25m
-            memory: 64Mi
-          limits:
-            cpu: 50m
-            memory: 64Mi
         securityContext:
           capabilities:
             drop:
@@ -76,9 +67,6 @@ spec:
           name: dexconfig
         - mountPath: /tls
           name: argocd-dex-server-tls
-        - name: cluster-ca-volume
-          mountPath: /etc/ssl/cluster/ca.crt
-          subPath: ca.crt
       volumes:
       - emptyDir: {}
         name: static-files
@@ -95,9 +83,6 @@ spec:
             path: tls.key
           - key: ca.crt
             path: ca.crt
-      - name: cluster-ca-volume
-        secret:
-          secretName: cluster-ca
       affinity:
         podAntiAffinity:
           preferredDuringSchedulingIgnoredDuringExecution:
