--- a/apps/base/dev-argo-cd/deploy/manifests/base/repo-server/argocd-repo-server-deployment.yaml
+++ b/apps/base/dev-argo-cd/deploy/manifests/base/repo-server/argocd-repo-server-deployment.yaml
@@ -5,8 +5,6 @@ metadata:
     app.kubernetes.io/name: argocd-repo-server
     app.kubernetes.io/part-of: argocd
     app.kubernetes.io/component: repo-server
-  annotations:
-    reloader.stakater.com/auto: "true"
   name: argocd-repo-server
 spec:
   selector:
@@ -21,8 +19,8 @@ spec:
       automountServiceAccountToken: false
       containers:
       - name: argocd-repo-server
-        image: registry.lan/argocd:v2.7.1-ksops
-        imagePullPolicy: IfNotPresent
+        image: quay.io/argoproj/argocd:latest
+        imagePullPolicy: Always
         args:
           - /usr/local/bin/argocd-repo-server
         env:
@@ -152,8 +150,6 @@ spec:
             value: /helm-working-dir
           - name: HELM_DATA_HOME
             value: /helm-working-dir
-          - name: SOPS_AGE_KEY_FILE
-            value: /home/argocd/.sops/key.txt
         ports:
         - containerPort: 8081
         - containerPort: 8084
@@ -171,13 +167,6 @@ spec:
             port: 8084
           initialDelaySeconds: 5
           periodSeconds: 10
-        resources:
-          requests:
-            cpu: 25m
-            memory: 128Mi
-          limits:
-            cpu: 250m
-            memory: 128Mi
         securityContext:
           runAsNonRoot: true
           readOnlyRootFilesystem: true
@@ -204,17 +193,13 @@ spec:
           name: helm-working-dir
         - mountPath: /home/argocd/cmp-server/plugins
           name: plugins
-        - name: sops-key
-          readOnly: true
-          mountPath: "/home/argocd/.sops/key.txt"
-          subPath: "key.txt"
       initContainers:
       - command:
         - /bin/cp
         - -n
         - /usr/local/bin/argocd
         - /var/run/argocd/argocd-cmp-server
-        image: registry.lan/argocd:v2.7.1-ksops
+        image: quay.io/argoproj/argocd:latest
         name: copyutil
         securityContext:
           runAsNonRoot: true
@@ -259,11 +244,6 @@ spec:
           name: var-files
         - emptyDir: {}
           name: plugins
-        - name: sops-key
-          secret:
-            secretName: sops-key
-      nodeSelector:
-        capability/general-purpose: 'yes'
       affinity:
         podAntiAffinity:
           preferredDuringSchedulingIgnoredDuringExecution:
