--- a/apps/base/dev-argo-cd/deploy/manifests/base/redis/argocd-redis-deployment.yaml
+++ b/apps/base/dev-argo-cd/deploy/manifests/base/redis/argocd-redis-deployment.yaml
@@ -33,6 +33,7 @@ spec:
         ports:
         - containerPort: 6379
         securityContext:
+          readOnlyRootFilesystem: true
           allowPrivilegeEscalation: false
           capabilities:
             drop:
