Add build/deply tags

--- a/ansible/install_applications/roles/app_base/tasks/backup.yml
+++ b/ansible/install_applications/roles/app_base/tasks/backup.yml
@@ -5,3 +5,4 @@
     dest: "{{ restic_backup_apps_scripts_dir }}/{{ app_backup.name }}.sh"
     mode: 0700
   delegate_to: "{{ groups['apps_backup_controller'][0] }}"
+  tags: backup
